<resources>
    <string name="app_name">Proyecto Final Apps Moviles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="mis_notas">Mis Notas</string>
    <string name="mi_lista">Mi Lista</string>
    <string name="list">List</string>
    <string name="notes">Notes</string>
    <string name="titulo">Titulo</string>
    <string name="fecha">Fecha</string>
    <string name="agregar_nota">Agregar Nota</string>
    <string name="descripcion">Descripcion</string>
    <string name="agregar">Agregar</string>
    <string name="agregar_lista">Agregar Lista</string>
    <string name="agregar_item">Agregar Item</string>
    <string name="imagen">Imagen</string>
    <string name="quantity">Quantity</string>
    <string name="image">Image</string>
    <string name="add_item">Add Item</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    <string name="add_note">Add Note</string>
    <string name="description">Description</string>
    <string name="my_list">My List</string>
    <string name="my_notes">My Notes</string>
</resources>