<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".AddListActivity"
    android:background="#3B4044">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#2E2E2E">

        <TextView
            android:id="@+id/txt_noteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/add_note"
            android:textAlignment="center"
            android:textColor="#C5C6C7"
            android:textSize="45sp"/>

        <EditText
            android:id="@+id/edt_noteTitle"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/title"
            android:textAlignment="center"
            android:padding="10dp"
            android:textColor="#C5C6C7"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edt_noteDescription"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/description"
            android:textAlignment="center"
            android:padding="10dp"
            android:textColor="#C5C6C7"
            android:textSize="18sp"/>


        <Button
            android:id="@+id/btn_addNote"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="#879A77"
            android:elevation="5dp"
            android:padding="10dp"
            android:text="@string/add"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>