<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3B4044"
    android:orientation="horizontal"
    tools:context=".AddListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2E2E2E"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_listTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/add_item"
            android:textAlignment="center"
            android:textColor="#C5C6C7"
            android:textSize="45sp" />

        <EditText
            android:id="@+id/edt_listName"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/title"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="18sp" />
        <!--            android:textColor="#C5C6C7"-->

        <EditText
            android:id="@+id/edt_listQuantity"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/quantity"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="18sp" />
        <!--            android:textColor="#C5C6C7"-->

        <ImageView
            android:id="@+id/img_addItem"
            android:layout_width="345dp"
            android:layout_height="100.5dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/rounded_corners" />

        <Button
            android:id="@+id/btn_addItem"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="#879A77"
            android:elevation="5dp"
            android:fontFamily="@font/nunito_bold"
            android:padding="10dp"
            android:text="@string/add"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>