<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#3B4044"
    android:gravity="center_horizontal"
    tools:context=".AuthActivity">

    <TextView
        android:id="@+id/txtAuthTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/log_in"
        android:fontFamily="@font/NunitoBold"
        android:layout_marginTop="200dp"
        android:textSize="30sp"
        android:textColor="#C5C6C7"
        android:gravity="center"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_margin="137dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corners"
        android:clipToPadding="false"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/edtName"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:hint="@string/name"
            android:fontFamily="@font/NunitoRegular"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:fontFamily="@font/NunitoRegular"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:fontFamily="@font/NunitoRegular"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="#879A77"
            android:elevation="5dp"
            android:padding="10dp"
            android:text="@string/log_in"
            android:fontFamily="@font/NunitoBold"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/don_t_have_an_account"
            android:fontFamily="@font/NunitoRegular"
            android:textAlignment="center"
            android:textColor="#000000"/>
    </LinearLayout>
</LinearLayout>